[tool.poetry]
name = "zunda-ymm"
version = "0.1.0"
description = ""
authors = ["OhkuboSGMS <sinikake.gokiburi@gmail.com>"]
readme = "README.md"
packages = [{include = "zunda_ymm"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
